*Version 3.6.1*
* Fix small javascript bug on legacy system settings page where data source permissions were being set 2x

*Version 3.6.0*
* Add missing convenience methods for getStats in Numeric and Alphanumeric script context points, third argument cache defaults false
* Fixing debug logging in serial server input stream
* Fix quantize data source poll and interval logging delays to avoid a currentTimeMillis() call
* Add IP whitelist for virtual serial server sockets
* Add debug log of incoming IPs on virtual serial server sockets
* Improve handling of exception in data point listeners on initialize or terminate when only 1 listener is present
* Modify email FTL Model for events, references to evt.alarmLevel in overridden templates should be changed to evt.alarmLevel.value()
* Expose connection description and data source type translations in Data Source REST models
* Add SMTP mail server connection/read/write timeout system setting
* Fixing bug in process log that would not allow Error level logging for Mango Java Script
* Changing Java Script Script Permissions from multiple permissions groups into a single group.  Note the REST models will reflect this.
* Fix bug in legacy UI data source edit page that would not track a new data source's ID after initial save, this would effect some data source tools
* Adding validation to User to notify when creating a user with a username that is already used
* Restricting non-admin users from executing JavaScript that has access to Java classes. This means for anything with Script Permissions the 'superadmin' permission must be present to access any Java Classes.
* Add publisher control to RuntimeManager script utility
* Upgrade Spring Framework to 5.1.7
* Upgrade Spring Security to 5.1.5
* Fix bug in RealTimeDataPointValueCache where tags/permissions could become out of sync with the database during point save/restarts